--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "gtest lib",
     "debug": "tsc && node --inspect-brk node_modules/@glas/test/gtest.js lib",
-    "deploy": "npm version patch && npm publish",
+    "deploy": "npm version patch && npm publish --access public",
     "watch": "run-p 'watch:*'",
     "watch:build": "tsc -w",
     "watch:test": "nodemon -w lib -w src -w external -e js,ts,is,ion --delay 200ms -x npm run test"
